# range-family

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  Config.cmake
src/family/: CMakeLists.txt
src/family-tool/: CMakeLists.txt
src/family-tool/src/: application.cpp  application.h  main.cpp  main_task.cpp  main_task.h
src/family/doc/: RELEASE_NOTES.md  RELEASE_NOTES.txt
src/family/help/actions/en/: action_application-license.md  action_application-quit.md  action_application-release_notes.md  action_application-settings.html  action_application-settings.md  action_application-update.html  action_application-update.md  action_cloud-file_manager.html  action_cloud-file_manager.md  action_cloud-sessiion_manager.html  action_cloud-sessiion_manager.md  action_file-close.html  action_file-close.md  action_file-compare.html  action_file-compare.md  action_file-import.html  action_file-import.md  action_file-new.html  action_file-new.md  action_file-open.html  action_file-open.md  action_file-save.html  action_file-save.md  action_file-save_as.html  action_file-save_as.md  action_index.html  action_index.md  index.json
src/family/help/actions/sk/: action_application-about.html  action_application-about.md  action_application-about_qt.html  action_application-about_qt.md  action_application-help.html  action_application-help.md  action_application-license.html  action_application-license.md  action_application-quit.html  action_application-quit.md  action_application-release_notes.html  action_application-release_notes.md  action_application-settings.html  action_application-settings.md  action_application-update.html  action_application-update.md  action_cloud-file_manager.html  action_cloud-file_manager.md  action_cloud-sessiion_manager.html  action_cloud-sessiion_manager.md  action_file-close.html  action_file-close.md  action_file-compare.html  action_file-compare.md  action_file-import.html  action_file-import.md  action_file-new.html  action_file-new.md  action_file-open.html  action_file-open.md  action_file-save.html  action_file-save.md  action_file-save_as.html  action_file-save_as.md  action_index.html  action_index.md  index.json
src/family/help/general/en/: family_tree.html  family_tree.md  family_tree_json_specification.md  index.json  index.md
src/family/help/general/sk/: family_tree.html  family_tree.md  family_tree_json_specification.md  index.html  index.json  index.md
src/family/help/tutorials/en/: index.json  index.md  tutorial_Cloud_user_registration.md
src/family/help/tutorials/sk/: index.html  index.json  index.md  tutorial_Cloud user registration.html  tutorial_Cloud_user_registration.md
src/family/pixmaps/: range-family.icns
src/family/src/: action.cpp  action.h  address_edit_widget.cpp  address_edit_widget.h  ai_chat_dialog.cpp  ai_chat_dialog.h  ai_chat_widget.cpp  ai_chat_widget.h  application.cpp  application.h  calendar_dialog.cpp  calendar_dialog.h  central_widget.cpp  central_widget.h  date_edit_widget.cpp  date_edit_widget.h  diagram_colors.h  diagram_dialog.cpp  diagram_dialog.h  diagram_scene.cpp  diagram_scene.h  diagram_view.cpp  diagram_view.h  diagram_widget.cpp  diagram_widget.h  editor_widget.cpp  editor_widget.h  event_edit_widget.cpp  event_edit_widget.h  geo_coordinates_edit_widget.cpp  geo_coordinates_edit_widget.h  graphics_edge_item.cpp  graphics_edge_item.h  graphics_node_item.cpp  graphics_node_item.h  graphics_person_item.cpp  graphics_person_item.h  graphics_relation_item.cpp  graphics_relation_item.h  image_button.cpp  (+49 more)
src/family/translations/: en.ts  sk.ts
src/packaging/windows/: setup.iss.in
